--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@ethereumjs/tx": "^3.0.2",
     "@truffle/contract": "^4.3.8",
     "ganache-cli": "^6.12.2",
+    "solc": "^0.8.1",
     "truffle": "^5.1.67",
     "web3": "^1.3.4"
   }
