--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ethereumjs/tx": "^3.0.2",
     "@truffle/contract": "^4.3.8",
     "ganache-cli": "^6.12.2",
+    "ganache-core": "^2.13.2",
     "solc": "^0.8.1",
     "truffle": "^5.1.67",
     "web3": "^1.3.4"
