--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@ethereumjs/tx": "^3.0.2",
     "@truffle/contract": "^4.3.8",
+    "axios": "^0.21.1",
     "ganache-cli": "^6.12.2",
     "ganache-core": "^2.13.2",
+    "jsdom": "^16.4.0",
     "solc": "^0.8.1",
     "truffle": "^5.1.67",
     "web3": "^1.3.4"
